// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders default component 1`] = `
<button
  className="btn btn-default"
>
  Button Default
</button>
`;

exports[`Button Component renders primary component 1`] = `
<button
  className="btn btn-primary"
>
  Button Primary
</button>
`;

exports[`Button Component renders secondary component 1`] = `
<button
  className="btn btn-secondary"
>
  Button Secondary
</button>
`;
